tests/snapshots/alternative_control_syntax__alternative_for_endfor.snap
---
source: tests/alternative_control_syntax.rs
expression: program
---
Program {
    statements: [
        For {
            init: [
                Assign {
                    var: Variable {
                        name: Span {
                            start: 11,
                            end: 13,
                        },
                        span: Span {
                            start: 11,
                            end: 13,
                        },
                    },
                    expr: Integer {
                        value: [
                            48,
                        ],
                        span: Span {
                            start: 16,
                            end: 17,
                        },
                    },
                    span: Span {
                        start: 11,
                        end: 17,
                    },
                },
            ],
            condition: [
                Binary {
                    left: Variable {
                        name: Span {
                            start: 19,
                            end: 21,
                        },
                        span: Span {
                            start: 19,
                            end: 21,
                        },
                    },
                    op: Lt,
                    right: Integer {
                        value: [
                            49,
                            48,
                        ],
                        span: Span {
                            start: 24,
                            end: 26,
                        },
                    },
                    span: Span {
                        start: 19,
                        end: 26,
                    },
                },
            ],
            loop_expr: [
                PostInc {
                    var: Variable {
                        name: Span {
                            start: 28,
                            end: 30,
                        },
                        span: Span {
                            start: 28,
                            end: 30,
                        },
                    },
                    span: Span {
                        start: 28,
                        end: 32,
                    },
                },
            ],
            body: [
                Echo {
                    exprs: [
                        Variable {
                            name: Span {
                                start: 44,
                                end: 46,
                            },
                            span: Span {
                                start: 44,
                                end: 46,
                            },
                        },
                    ],
                    span: Span {
                        start: 39,
                        end: 54,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 56,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 56,
    },
}
