tests/snapshots/alternative_control_syntax__alternative_foreach_endforeach.snap
---
source: tests/alternative_control_syntax.rs
assertion_line: 67
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Foreach {
            expr: Variable {
                name: Span {
                    start: 15,
                    end: 21,
                },
                span: Span {
                    start: 15,
                    end: 21,
                },
            },
            key_var: Some(
                Variable {
                    name: Span {
                        start: 25,
                        end: 29,
                    },
                    span: Span {
                        start: 25,
                        end: 29,
                    },
                },
            ),
            value_var: Variable {
                name: Span {
                    start: 33,
                    end: 39,
                },
                span: Span {
                    start: 33,
                    end: 39,
                },
            },
            body: [
                Echo {
                    exprs: [
                        Binary {
                            left: Binary {
                                left: Variable {
                                    name: Span {
                                        start: 51,
                                        end: 55,
                                    },
                                    span: Span {
                                        start: 51,
                                        end: 55,
                                    },
                                },
                                op: Concat,
                                right: String {
                                    value: [
                                        39,
                                        58,
                                        32,
                                        39,
                                    ],
                                    span: Span {
                                        start: 58,
                                        end: 62,
                                    },
                                },
                                span: Span {
                                    start: 51,
                                    end: 62,
                                },
                            },
                            op: Concat,
                            right: Variable {
                                name: Span {
                                    start: 65,
                                    end: 71,
                                },
                                span: Span {
                                    start: 65,
                                    end: 71,
                                },
                            },
                            span: Span {
                                start: 51,
                                end: 71,
                            },
                        },
                    ],
                    span: Span {
                        start: 46,
                        end: 83,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 85,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 85,
    },
}
