tests/snapshots/alternative_control_syntax__alternative_if_empty_blocks.snap
---
source: tests/alternative_control_syntax.rs
expression: program
---
Program {
    statements: [
        If {
            condition: Variable {
                name: Span {
                    start: 10,
                    end: 12,
                },
                span: Span {
                    start: 10,
                    end: 12,
                },
            },
            then_block: [],
            else_block: Some(
                [
                    If {
                        condition: Variable {
                            name: Span {
                                start: 23,
                                end: 25,
                            },
                            span: Span {
                                start: 23,
                                end: 25,
                            },
                        },
                        then_block: [],
                        else_block: Some(
                            [],
                        ),
                        span: Span {
                            start: 15,
                            end: 41,
                        },
                    },
                ],
            ),
            span: Span {
                start: 6,
                end: 41,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 41,
    },
}
