tests/snapshots/alternative_control_syntax__alternative_if_with_html.snap
---
source: tests/alternative_control_syntax.rs
expression: program
---
Program {
    statements: [
        If {
            condition: Variable {
                name: Span {
                    start: 10,
                    end: 15,
                },
                span: Span {
                    start: 10,
                    end: 15,
                },
            },
            then_block: [
                InlineHtml {
                    value: [
                        10,
                        32,
                        32,
                        32,
                        32,
                        60,
                        100,
                        105,
                        118,
                        62,
                        67,
                        111,
                        110,
                        116,
                        101,
                        110,
                        116,
                        60,
                        47,
                        100,
                        105,
                        118,
                        62,
                        10,
                    ],
                    span: Span {
                        start: 20,
                        end: 50,
                    },
                },
            ],
            else_block: None,
            span: Span {
                start: 6,
                end: 59,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 59,
    },
}
