tests/snapshots/alternative_control_syntax__alternative_while_empty.snap
---
source: tests/alternative_control_syntax.rs
expression: program
---
Program {
    statements: [
        While {
            condition: Variable {
                name: Span {
                    start: 13,
                    end: 23,
                },
                span: Span {
                    start: 13,
                    end: 23,
                },
            },
            body: [],
            span: Span {
                start: 6,
                end: 36,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 36,
    },
}
